# humi_bot

./: .gitignore  Cargo.toml  Dockerfile  LICENSE.txt  README.md  start-server.sh
.github/workflows/: build-and-test.yml
src/: calendar_parser.rs  lib.rs  main.rs
tests/: calendar.ics
www/: .env.template  api.js  app.js  navigate.js  package-lock.json  package.json  scheduler.js
www/app/: api.js  db.js  helper.js  logger.js  navigate.js  scheduler.js
www/test/: app.spec.js  db.spec.js  logger.spec.js  mocks.js  scheduler.spec.js
