[package]
name = "hr_bot"
version = "0.1.0"
edition = "2021"

[lib]
name = "lib"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "main"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2.62"
wee_alloc = "0.4.5"
serde-wasm-bindgen = "0.5.0"
web-sys = { version = "0.3.39", features = [ "console" ]  }
js-sys = "0.3.6"
chrono = "0.4"
tl = { version = "0.7.8", features = ["simd"] }
